--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="currentYear"></span> Евгения Замятина. QA Engineer.</p>
+            <p>&copy; <span id="currentYear"></span> Евгения Замятина</p>
+            <p>QA Engineer</p>
         </div>
     </footer>
-
     <script src="./script.js"></script>
 </body>
 </html>
